feat: 背景颜色修改

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     // 加载完成后初始化插件
     window.onload = () => {
-      initStoryblokPlugin();
+    //   initStoryblokPlugin();
+        window.document.body.style.backgroundColor = 'red';
     };
   </script>
 </head>
