--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>1111</div>
-    <button>按钮1</button>
+    <button id="btn1">按钮1</button>
     <button>按钮2</button>
     <script src="./index.js"></script>
 </body>
