--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="https://commerce.storyblok.com/storyblok-plugin/app.bundle.js"></script> -->
+    <script src="https://commerce.storyblok.com/storyblok-plugin/app.bundle.js"></script>
     <script src="https://app.storyblok.com/f/storyblok-v2-latest.js"></script>
 </head>
+
 <body>
     <div>1111</div>
     <button id="btn1">按钮1</button>
     <button>按钮2</button>
     <script src="./index.js"></script>
 </body>
+
 </html>
