--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://commerce.storyblok.com/storyblok-plugin/app.bundle.js"></script>
-    <script src="https://app.storyblok.com/f/storyblok-v2-latest.js"></script>
+    <!-- <script src="https://commerce.storyblok.com/storyblok-plugin/app.bundle.js"></script> -->
+    <!-- <script src="https://app.storyblok.com/f/storyblok-v2-latest.js"></script> -->
+    <script src="https://unpkg.com/@storyblok/js"></script>
+
 </head>
 
 <body>
